--- a/org_init.org
+++ b/org_init.org
@@ -485,3 +485,9 @@
                             (?\$ . ?\$)
                             ) ) 
 #+END_SRC
+* Magit
+#+BEGIN_SRC emacs-lisp
+(use-package magit
+  :ensure t)
+(global-set-key (kbd "C-x g") 'magit-status)
+#+END_SRC
