--- a/org_init.org
+++ b/org_init.org
@@ -531,10 +531,8 @@
 #+END_SRC
 * Bash-Completion
 #+BEGIN_SRC emacs-lisp
- (add-to-list 'load-path "~/.emacs.d/bash")
-(autoload 'bash-completion-dynamic-complete 
-   "bash-completion"
-   "BASH completion hook")
+ (use-package bash-completion
+	:ensure t)
  (add-hook 'shell-dynamic-complete-functions
    'bash-completion-dynamic-complete)
 #+END_SRC
@@ -548,3 +546,11 @@
 (org-ac/config-default)
 #+END_SRC
 
+* Magit Gitflow
+#+BEGIN_SRC emacs-lisp
+(use-package magit-gitflow
+	:ensure t)
+
+(require 'magit-gitflow)
+(add-hook 'magit-mode-hook 'turn-on-magit-gitflow)
+#+END_SRC
