--- a/org_init.org
+++ b/org_init.org
@@ -560,7 +560,10 @@
 #+END_SRC
 * Emacs edit in chrome
 #+BEGIN_SRC emacs-lisp
-(add-to-list 'load-path "~/.emacs.d/lisp")
-(require 'edit-server)
-(edit-server-start)
+(use-package atomic-chrome
+:ensure t
+:config 
+(atomic-chrome-start-server))
 #+END_SRC
+
+
