Added shortcut C-ü to go to latex-mode in atomic chrome

--- a/org_init.org
+++ b/org_init.org
@@ -564,7 +564,18 @@
 :ensure t
 :config 
 (atomic-chrome-start-server))
+
+(defun atomic-latex-start ()
+(latex-mode)
+(latex-preview-pane-mode 0)
+(atomic-chrome-edit-mode)
+)
+
 (setq atomic-chrome-buffer-open-style 'frame)
+
+(global-set-key (kbd "C-ü") 'atomic-latex-start)
+
+
 #+END_SRC
 
 
