--- a/org_init.org
+++ b/org_init.org
@@ -566,14 +566,15 @@
 (atomic-chrome-start-server))
 
 (defun atomic-latex-start ()
+(interactive)
 (latex-mode)
-(latex-preview-pane-mode 0)
+(latex-preview-pane-mode)
 (atomic-chrome-edit-mode)
 )
 
 (setq atomic-chrome-buffer-open-style 'frame)
 
-(global-set-key (kbd "C-ü") 'atomic-latex-start)
+(global-set-key (kbd "C-ü") (lambda () (interactive) (atomic-latex-start)))
 
 
 #+END_SRC
