Added support for umlaute (they are replaced by LATEX escape chars)

--- a/org_init.org
+++ b/org_init.org
@@ -559,27 +559,6 @@
 (require 'magit-gitflow)
 (add-hook 'magit-mode-hook 'turn-on-magit-gitflow)
 #+END_SRC
-* Emacs edit in chrome
-#+BEGIN_SRC emacs-lisp
-(use-package atomic-chrome
-:ensure t
-:config 
-(atomic-chrome-start-server))
-
-(defun atomic-latex-start ()
-(interactive)
-(latex-mode)
-(latex-preview-pane-mode)
-(atomic-chrome-edit-mode)
-)
-
-(setq atomic-chrome-buffer-open-style 'frame)
-
-(global-set-key (kbd "C-ü") (lambda () (interactive) (atomic-latex-start)))
-
-
-#+END_SRC
-
 * Company Completion
 #+BEGIN_SRC emacs-lisp
 (use-package company
@@ -593,4 +572,72 @@
 (use-package evil
 	:ensure t)
 (evil-mode 1)
+#+END_SRC
+* Umlaute to LATEX
+#+BEGIN_SRC emacs-lisp 
+(defun insert-oe ()
+  "Insert \"o at cursor point."
+  (interactive)
+  (insert "\\\"o"))
+(global-set-key (kbd "ö") 'insert-oe) ; ö
+
+(defun insert-OE ()
+  "Insert \"O at cursor point."
+  (interactive)
+  (insert "\\\"O"))
+(global-set-key (kbd "Ö") 'insert-OE) ; Ö
+
+(defun insert-ae ()
+  "Insert \"a at cursor point."
+  (interactive)
+  (insert "\\\"a"))
+(global-set-key (kbd "ä") 'insert-ae) ; ä 
+
+(defun insert-AE ()
+  "Insert \"A at cursor point."
+  (interactive)
+  (insert "\\\"A"))
+(global-set-key (kbd "Ä") 'insert-AE) ; Ä
+
+(defun insert-ue ()
+  "Insert \"u at cursor point."
+  (interactive)
+  (insert "\\\"u"))
+(global-set-key (kbd "ü") 'insert-ue) ; ü
+
+(defun insert-UE ()
+  "Insert \"U at cursor point."
+  (interactive)
+  (insert "\\\"U"))
+(global-set-key (kbd "Ü") 'insert-OE) ; Ü
+#+END_SRC
+  (backward-char 4))
+#+END_SRC
+* Emacs edit in chrome
+#+BEGIN_SRC emacs-lisp
+(use-package atomic-chrome
+:ensure t)
+
+(defun ztlevi-atomic-chrome-server-running-p ()
+      (cond ((executable-find "lsof")
+             (zerop (call-process "lsof" nil nil nil "-i" ":64292")))
+            ((executable-find "netstat") ; Windows
+             (zerop (call-process-shell-command "netstat -aon | grep 64292")))))
+
+    (if (ztlevi-atomic-chrome-server-running-p)
+        (message "Can't start atomic-chrome server, because port 64292 is already used")
+      (atomic-chrome-start-server))
+
+(defun atomic-latex-start ()
+(interactive)
+(latex-mode)
+(latex-preview-pane-mode)
+(atomic-chrome-edit-mode)
+)
+
+(setq atomic-chrome-buffer-open-style 'frame)
+
+(global-set-key (kbd "C-ü") (lambda () (interactive) (atomic-latex-start)))
+
+
 #+END_SRC
