Emacs scrolls line by line

--- a/org_init.org
+++ b/org_init.org
@@ -12,13 +12,14 @@
 #+END_SRC
 * interface tweaks
 #+BEGIN_SRC emacs-lisp
-(setq inhibit-startup-message t)
-(tool-bar-mode -1)
-(scroll-bar-mode -1)
-(menu-bar-mode 1)
-(fset 'yes-or-no-p 'y-or-n-p)
-(global-set-key (kbd "<f5>") 'revert-buffer)
-(add-to-list 'default-frame-alist '(fullscreen . maximized))
+  (setq inhibit-startup-message t)
+  (tool-bar-mode -1)
+  (scroll-bar-mode -1)
+  (menu-bar-mode 1)
+  (fset 'yes-or-no-p 'y-or-n-p)
+  (global-set-key (kbd "<f5>") 'revert-buffer)
+  (add-to-list 'default-frame-alist '(fullscreen . maximized))
+  (setq scroll-conservatively 100)
 #+END_SRC
 
 * try
