--- a/org_init.org
+++ b/org_init.org
@@ -747,9 +747,9 @@ Evil mode does not autostart
 #+END_SRC
 * rainbow
 #+BEGIN_SRC emacs-lisp
-(use-package rainbow-mode
-	:ensure t
-      :init (rainbow-mode 1))
+  (use-package rainbow-mode
+          :ensure t
+        :init (add-hook 'prog-mode-hook 'rainbow-mode))
 
 #+END_SRC
 
