--- a/org_init.org
+++ b/org_init.org
@@ -239,178 +239,6 @@ Org bullets makes things look pretty
   :bind ("M-s" . avy-goto-word-1)) ;; changed from char as per jcs
   #+END_SRC
 
-* Autocomplete
-  #+BEGIN_SRC emacs-lisp
-  (use-package auto-complete
-  :ensure t
-  :init
-  (progn
-    (ac-config-default)
-    (global-auto-complete-mode t)
-    ))
-   (add-hook 'c-mode-common-hook '(lambda ()
-
-          ;; ac-omni-completion-sources is made buffer local so
-          ;; you need to add it to a mode hook to activate on 
-          ;; whatever buffer you want to use it with.  This
-          ;; example uses C mode (as you probably surmised).
-
-          ;; auto-complete.el expects ac-omni-completion-sources to be
-          ;; a list of cons cells where each cell's car is a regex
-          ;; that describes the syntactical bits you want AutoComplete
-          ;; to be aware of. The cdr of each cell is the source that will
-          ;; supply the completion data.  The following tells autocomplete
-          ;; to begin completion when you type in a . or a ->
-
-          (add-to-list 'ac-omni-completion-sources
-                       (cons "\\." '(ac-source-semantic)))
-          (add-to-list 'ac-omni-completion-sources
-                       (cons "->" '(ac-source-semantic)))
-
-          ;; ac-sources was also made buffer local in new versions of
-          ;; autocomplete.  In my case, I want AutoComplete to use 
-          ;; semantic and yasnippet (order matters, if reversed snippets
-          ;; will appear before semantic tag completions).
-
-          (setq ac-sources '(ac-source-semantic ac-source-yasnippet))
-  ))
-  #+END_SRC
-# * AUCTeX
-# #+BEGIN_SRC emacs-lisp
-# (load "auctex.el" nil t t)
-# (load "preview-latex.el" nil t t)
-# (setq TeX-auto-save t)                  ;自动保存
-# (setq TeX-parse-self t)                 ;解析
-# (setq-default TeX-master nil)
-# (dolist (hook (list
-#                'LaTeX-mode-hook
-#                'latex-mode-hook
-#                ))
-#   (add-hook hook 'turn-on-reftex))
-# (add-hook 'LaTeX-mode-hook
-#       (lambda()
-#         (local-set-key [C-tab] 'TeX-complete-symbol)))
-# (use-package auto-complete-auctex
-# 	:ensure t)
-# (require 'auto-complete-auctex)
-# #+END_SRC
-# * Flymake
-# #+BEGIN_SRC emacs-lisp
-# (require 'flymake)
-
-# (defun flymake-get-tex-args (file-name)
-# (list "pdflatex"
-# (list "-file-line-error" "-draftmode" "-interaction=nonstopmode" file-name)))
-
-# (add-hook 'LaTeX-mode-hook 'flymake-mode)
-
-# (setq ispell-program-name "aspell") ; could be ispell as well, depending on your preferences
-# (setq ispell-dictionary "english") ; this can obviously be set to any language your spell-checking program supports
-
-# (add-hook 'LaTeX-mode-hook 'flyspell-mode)
-# (add-hook 'LaTeX-mode-hook 'flyspell-buffer)
-# ;(require 'latex-pretty-symbols)
-# (require 'flymake)
-
-# (defun flymake-get-tex-args (file-name)
-# (list "pdflatex"
-# (list "-file-line-error" "-draftmode" "-interaction=nonstopmode" file-name)))
-# (add-to-list
-#     `flymake-err-line-patterns
-#     '("Runaway argument?" nil nil nil)) ; fixes unbalanced braces in LaTeX files
-
-# (add-hook 'LaTeX-mode-hook 'flymake-mode)
-
-# (setq ispell-program-name "aspell") ; could be ispell as well, depending on your preferences
-# (setq ispell-dictionary "english") ; this can obviously be set to any language your spell-checking program supports
-
-# (add-hook 'LaTeX-mode-hook 'flyspell-mode)
-# (add-hook 'LaTeX-mode-hook 'flyspell-buffer)
-# #+END_SRC
-# * Outline Mode
-# #+BEGIN_SRC emacs-lisp
-# (defun turn-on-outline-minor-mode ()
-# (outline-minor-mode 1))
-
-# (add-hook 'LaTeX-mode-hook 'turn-on-outline-minor-mode)
-# (add-hook 'latex-mode-hook 'turn-on-outline-minor-mode)
-# (setq outline-minor-mode-prefix "\C-c \C-o") ; Or something else
-# #+END_SRC
-# * Latex Preview Pane
-# #+BEGIN_SRC emacs-lisp
-# (use-package latex-preview-pane
-# 	:ensure t)
-# (latex-preview-pane-enable)
-# (add-hook 'auctex 'latex-preview-pane-mode)
-# (add-hook 'latex-mode 'latex-preview-pane-mode)
-# (add-hook 'AUCTeX 'latex-preview-pane-mode)
-# (add-hook 'LaTeX-mode-hook ' latex-preview-pane-mode)
-# #+END_SRC
-# * Theme
-# #+BEGIN_SRC emacs-lisp
-# ((use-package monokai-theme
-#       :ensure t
-#       :init
-#       (load-theme 'monokai t)
-#       )
-# #+END_SRC
-# * Latex-Auto-Complete
-# #+BEGIN_SRC emacs-lisp
-# (require 'package)
-# (package-initialize)
-
-# ;; yasnippet code 'optional', before auto-complete
-# (require 'yasnippet)
-# (yas-global-mode 1)
-
-# ;; auto-complete setup, sequence is important
-# (require 'auto-complete)
-# (add-to-list 'ac-modes 'latex-mode) ; beware of using 'LaTeX-mode instead
-# (use-package ac-math
-#   :ensure t)
-# (require 'ac-math) ; package should be installed first 
-# (defun my-ac-latex-mode () ; add ac-sources for latex
-#    (setq ac-sources
-#          (append '(ac-source-math-unicode
-#            ac-source-math-latex
-#            ac-source-latex-commands)
-#                  ac-sources)))
-# (add-hook 'LaTeX-mode-hook 'my-ac-latex-mode)
-# (setq ac-math-unicode-in-math-p t)
-# (ac-flyspell-workaround) ; fixes a known bug of delay due to flyspell (if it is there)
-# (add-to-list 'ac-modes 'org-mode) ; auto-complete for org-mode (optional)
-# (require 'auto-complete-config) ; should be after add-to-list 'ac-modes and hooks
-# (ac-config-default)
-# (setq ac-auto-start nil)            ; if t starts ac at startup automatically
-# (setq ac-auto-show-menu t)
-# (global-auto-complete-mode t) 
-# #+END_SRC
-# * Reveal.js
-# #+BEGIN_SRC emacs-lisp
-# (use-package ox-reveal
-# :ensure ox-reveal)
-
-# (setq org-reveal-root "http://cdn.jsdelivr.net/reveal.js/3.0.0/")
-# (setq org-reveal-mathjax t)
-
-# (use-package htmlize
-# :ensure t)
-# #+END_SRC
-# * Flycheck
-# #+BEGIN_SRC emacs-lisp
-# (use-package flycheck
-#   :ensure t
-#   :init
-#   (global-flycheck-mode t))
-# #+END_SRC
-# * YASnippet
-# #+BEGIN_SRC emacs-lisp
-# (use-package yasnippet
-#   :ensure t
-#   :init
-#     (yas-global-mode 1))
-# #+END_SRC
-
 * AUCTeX
 #+BEGIN_SRC emacs-lisp
 (load "auctex.el" nil t t)
@@ -982,4 +810,18 @@ make
       :ensure t
       :config (add-hook 'prog-mode-hook 'pretty-mode)
       )
+#+END_SRC
+* Emacsclient C-x k to end client
+#+BEGIN_SRC emacs-lisp
+    (add-hook 'server-switch-hook 
+            (lambda ()
+              (when (current-local-map)
+                (use-local-map (copy-keymap (current-local-map))))
+              (local-set-key (kbd "C-x k") 'server-edit)))
+#+END_SRC
+* Org Agenda Files
+#+BEGIN_SRC emacs-lisp
+  (setq org-agenda-files (append
+                          (file-expand-wildcards "~/Documents/agenda/*.org")
+                          ))
 #+END_SRC
