added battery indicator

--- a/org_init.org
+++ b/org_init.org
@@ -778,3 +778,14 @@ make
                           (file-expand-wildcards "~/Documents/agenda/*.org")
                           ))
 #+END_SRC
+* Battery indicator
+#+BEGIN_SRC emacs-lisp
+    (use-package fancy-battery
+    :ensure t
+    :config
+      (setq fancy-battery-show-percentage t)
+      (setq battery-update-interval 15)
+      (if window-system
+        (fancy-battery-mode)
+        (display-battery-mode)))
+#+END_SRC
